--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-extended-stylesheet": "^0.11.1",
     "react-native-vector-icons": "^6.1.0"
   }
 }
